<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/toolbar" android:visibility="gone" />

    <include layout="@layout/content_fragment_mis_activos" />


    <!--android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_new_movimiento" /-->

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#50000000"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorAccent"
        app:menu_colorRipple="@color/colorAccent"
        app:menu_fab_label="@string/tipo_movimiento">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_cambio_ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_file_transfer"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_size="normal"
            app:fab_label="@string/cambio_ubicacion" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_solicitud_baja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baja"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_size="normal"
            app:fab_label="@string/solicitud_baja" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_traslados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_traslados"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_size="normal"
            app:fab_label="@string/traslados" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_ubicacion_responsable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_transfer"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_colorRipple="@color/colorAccent"
            app:fab_size="normal"
            app:fab_label="@string/traslados_resposable" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>