<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gruporosul.activosfijos.fragment.FichaColaboradorFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#dd5e8587">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ingresar_cod"
            android:id="@+id/textView"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_layout_codigo"
            android:textColorHint="@color/textColorSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="@color/textColorSecondary"
                android:textColorHint="@color/textColorSecondary"
                android:id="@+id/txtCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/prompt_codigo"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/searchCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/buscar"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:drawableLeft="@drawable/ic_search"/>


    </LinearLayout>

    <View
        android:id="@+id/separador"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/textColorPrimary"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="#677c9a"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/separador">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/escanear_carnet"
            android:id="@+id/textView2"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/escanearCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/escanear"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:drawableLeft="@drawable/ic_assignment"/>


    </LinearLayout>
</RelativeLayout>
